# GoldParticles

./: CMakeLists.txt  LICENSE  data.txt  dqmom.cpp  user_data.hpp
